# simple-web-server

./: .gitignore  CNAME  LICENSE  README.md  README_es.md  README_fr-FR.md  README_ja.md  README_ru.md  README_uk.md  README_zh-CN.md  SECURITY.md  WSC.js  bookmarks.js  directory-listing-template-static.html  directory-listing-template.html  help_text.js  index.html  index.js  lang.js  main.js  mime.js  open_source_licenses.txt  package-lock.json  package.json  plugin.js  preload.js  proxy.js  style.css
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  need-help-.md
WSC/: FileSystem.js  crypto.js  handlers.js  htaccess.js  httpRequest.js  proxy.js  translator.js  utils.js
WSC/proxy/: README.md  changeHtml.js  fetch.js  (+8 more)
docs/: CNAME  config.md  custom scripts.md  htaccess.md  index.html  index.md  install.md  options.md  style.css
howTo/: HTACCESS.md  custom https cert&key.md  custom scripts.md  httpRequest.md  https cert-key.md  options.html  post.md
images/: icon.ai  icon.icns  logo.ai
lang/: ar.json  az.json  be.json  de.json  el.json  en.json  es.json  fr.json  hu.json  id.json  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ro.json  ru.json  sv.json  ta.json  th.json  tr.json  uk.json  zh-Hant.json  zh.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/src/: main.rs
website/: build.js  package-lock.json  package.json  versions.json
www/: build.js  package-lock.json  package.json  style.css  versions.json
www2/: package.json  versions.json
wwwold/: 404.html  build.js
(+76 files in other folders)
